--- a/semesterProjectSecondItterationGUI/pom.xml
+++ b/semesterProjectSecondItterationGUI/pom.xml
@@ -80,7 +80,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>presentation.javafxexample/presentation.RunGUI
+                            <mainClass>presentation.javafxexample/GUI.RunGUI
                             </mainClass>
                         </configuration>
                     </execution>
